--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset = "UTF-8">
     <title>Noss.lv</title>
-    <link rel = "stylesheet" href="project/style.css" type="text/css">
+    <link rel = "stylesheet" href="style.css" type="text/css">
     <link rel = "icon" type = "image/jpeg" href = "folder images/globe-icon-simple-minimal-96x96-pictograph-vector-19859628.jpg">
 </head>
 <body>
