--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset = "UTF-8">
     <title>Noss.lv</title>
     <link rel = "stylesheet" href="style.css" type="text/css">
-    <link rel = "icon" type = "image/jpeg" href = "folder images/globe-icon-simple-minimal-96x96-pictograph-vector-19859628.jpg">
+    <link rel = "icon" type = "image/jpeg" href = "globe-icon-simple-minimal-96x96-pictograph-vector-19859628.jpg">
 </head>
 <body>
     <div class = "boxes" id="box-top">Welcome to the Website
