--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <a id="Sales" href="" title="Sales">Sales</a>
         </div>
     </div>
+        <div>
+            <img id = "Addvirt" src = "images.jpg">
+        </div>
     <footer>
         <hr>
         Author: Deniss<br>
