--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class = "boxes" id="box-top">Welcome to the Website
         <div id = "boxwithinbox">
-            <a id="Home" href="Worldside" title="Home">Home</a>
+            <a id="Home" href="https://www.ss.lv/en" title="Home">Home</a>
             <a id="About Us" href="" title="About Us">About Us</a>
             <a id="Sales" href="" title="Sales">Sales</a>
         </div>
