--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
     </div>
         <div>
-            <img id = "Addvirt" src = "images/images.jpg" type = "image/jpg">
+            <img src = "images/images.jpg" id = "Addvirt"  type = "image/jpg">
         </div>
     <footer>
         <hr>
